--- a/package.json
+++ b/package.json
@@ -41,14 +41,14 @@
   },
   "devDependencies": {
     "@dmnchzl/mocca-css": "latest",
-    "chalk": "~5.3.0",
-    "husky": "~9.0.10",
-    "lightningcss": "~1.24.0",
-    "lint-staged": "~15.2.0",
-    "prettier": "~3.2.5",
+    "chalk": "~5.4.0",
+    "husky": "~9.1.5",
+    "lightningcss": "~1.30.0",
+    "lint-staged": "~16.1.0",
+    "prettier": "~3.6.0",
     "sass": "~1.71.0",
-    "vite": "~5.1.5",
-    "vitepress": "~1.0.0-rc.45"
+    "vite": "~7.0.5",
+    "vitepress": "~1.0.0"
   },
   "lint-staged": {
     "docs/**/*.md": "prettier --write",
